--- a/.htaccess
+++ b/.htaccess
@@ -27,3 +27,11 @@ RewriteRule ^([a-zA-Z0-9]+)/$ index.php?module=$1 [L,QSA]
 RewriteRule ^([a-zA-Z0-9]+)/([a-zA-Z0-9_-]+)$ index.php?module=$1&module_param2=$2 [L,QSA]
 RewriteRule ^([a-zA-Z0-9]+)/([a-zA-Z0-9_-]+)/$ index.php?module=$1&module_param2=$2 [L,QSA]
 
+#environment variable
+
+#PROJECT_HOME is path after your web server DocumentRoot
+SetEnv PROJECT_HOME /github/php/bekaku-php-backend-starter
+#PROJECT_DATA_HOME is real path of 'data' folder
+SetEnv PROJECT_DATA_HOME D:/php_htdocs/github/php/bekaku-php-backend-starter/data
+#PROJECT_DATA_DISPLAY is path for access from public
+SetEnv PROJECT_DATA_DISPLAY /github/php/bekaku-php-backend-starter/data
