--- a/.htaccess
+++ b/.htaccess
@@ -8,15 +8,19 @@
 
 #Options +FollowSymLinks
 #Options +Indexes
+Options +FollowSymLinks -Indexes
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+
 
 #1
 #http://www.example.com/index.php?module=news  to http://www.example.com/news
 #profile mode http://www.example.com/index.php?module=bekaku => http://www.example.com/bekaku
-RewriteRule ^([a-zA-Z0-9]+)$ index.php?module=$1 [L,QSA]
-RewriteRule ^([a-zA-Z0-9]+)/$ index.php?module=$1 [L,QSA]
+
+RewriteRule ^([a-zA-Z0-9-]+)$ index.php?module=$1 [L,QSA]
+RewriteRule ^([a-zA-Z0-9-]+)/$ index.php?module=$1 [L,QSA]
+
 #2
 #profile mode http://xxx.com/index.php?modules=bekaku&module_param2=shop  => http://xxx.com/bekaku/shop
 #profile mode http://xxx.com/index.php?modules=bekaku&module_param2=photos  => http://xxx.com/bekaku/photos
@@ -24,11 +28,11 @@ RewriteRule ^([a-zA-Z0-9]+)/$ index.php?module=$1 [L,QSA]
 #profile mode http://xxx.com/index.php?modules=bekaku&module_param2=following  => http://xxx.com/bekaku/following
 #profile mode http://xxx.com/index.php?modules=bekaku&module_param2=followers  => http://xxx.com/bekaku/followers
 #profile mode http://xxx.com/index.php?modules=profile&module_param2=edit  => http://xxx.com/profile/edit
-RewriteRule ^([a-zA-Z0-9]+)/([a-zA-Z0-9_-]+)$ index.php?module=$1&module_param2=$2 [L,QSA]
-RewriteRule ^([a-zA-Z0-9]+)/([a-zA-Z0-9_-]+)/$ index.php?module=$1&module_param2=$2 [L,QSA]
+
+RewriteRule ^([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)$ index.php?module=$1&module_param2=$2 [L,QSA]
+RewriteRule ^([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)/$ index.php?module=$1&module_param2=$2 [L,QSA]
 
 #environment variable
-
 #PROJECT_HOME is path after your web server DocumentRoot
 SetEnv PROJECT_HOME /github/php/bekaku-php-rest-api-starter
 #PROJECT_DATA_HOME is real path of 'data' folder
