--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
-PROJECT_HOME=/github/php/bekaku-php-rest-api-starter
-PROJECT_DATA_HOME=D:/php_htdocs/github/php/bekaku-php-rest-api-starter/data
-PROJECT_DATA_DISPLAY=/github/php/bekaku-php-rest-api-starter/data
+PROJECT_HOME="/github/php/bekaku-php-rest-api-starter"
+PROJECT_DATA_HOME="D:/php_htdocs//github/php/bekaku-php-rest-api-starter/data"
+PROJECT_DATA_DISPLAY="/github/php/grand-center-api/data"
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+APP_KEY="GBPDx9HnjYjGKu7dptpZd8tF2H5Rgz2w"
+
+DB_CONNECTION="mysql"
+DB_HOST="127.0.0.1"
 DB_PORT=3306
-DB_DATABASE=bekaku_php
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE="bekaku_php"
+DB_USERNAME="root"
+DB_PASSWORD=""
+
+APP_DEFAULT_PASSWORD="P@ssw0rd"
