--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-PROJECT_HOME="/github/php/bekaku-php-rest-api-starter"
-PROJECT_DATA_HOME="D:/php_htdocs//github/php/bekaku-php-rest-api-starter/data"
-PROJECT_DATA_DISPLAY="/github/php/bekaku-php-rest-api-starter/data"
+PROJECT_HOME="/php-rest-api"
+PROJECT_DATA_HOME="D:/code/php/php-rest-api/data"
+PROJECT_DATA_DISPLAY="/php-rest-api/data"
 
 APP_KEY="GBPDx9HnjYjGKu7dptpZd8tF2H5Rgz2w"
 
 DB_CONNECTION="mysql"
 DB_HOST="127.0.0.1"
-DB_PORT=3306
-DB_DATABASE="bekaku_php"
+DB_PORT=3308
+DB_DATABASE="php_rest_api"
 DB_USERNAME="root"
 DB_PASSWORD=""
 
