--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ DB_HOST="127.0.0.1"
 DB_PORT=3308
 DB_DATABASE="php_rest_api"
 DB_USERNAME="root"
-DB_PASSWORD=""
+DB_PASSWORD="CH789162be"
 
 APP_DEFAULT_PASSWORD="P@ssw0rd"
